--- a/ProjectFrontEnd/css/page1.css
+++ b/ProjectFrontEnd/css/page1.css
@@ -341,7 +341,13 @@ body {
 }
 
 .medya {
+    height: 25px;
     border: none;
+    color: white;
+    cursor: pointer;
+    margin: 10px 10px;
+    width: 110px;
+    display: inline;
 }
 
 .hr {
@@ -429,32 +435,42 @@ body {
     opacity: 1;
 }
 
-.col-12 {}
-
-ul {
+.tab {
     display: flex;
     justify-content: center;
+    margin: 100px 10px 50px;
+    padding: 15px 50px;
+    overflow: hidden;
 }
 
-.col-12 ul li {
-    margin: 10px;
-}
-
-.col-12 ul li a {
-    color: #000000;
+.tab button {
     background-color: #f5f5f5;
     margin: 0px 10px;
     padding: 15px 50px;
+    border: none;
+    cursor: pointer;
+    transition: 0.3s;
+    font-size: 17px;
 }
 
-.col-12 ul li a:hover {
+.tab button:hover {
     background-color: #649a58;
     color: white;
 }
 
-.tab-content {
-    border: 1px solid #ededed;
+.tab button.active {
+    background-color: #649a58;
+    color: white;
+}
+
+.tab a:hover {
+    background-color: #649a58;
+    color: white;
+}
+
+.tabcontent {
     padding: 30px;
+    border: 1px solid #ccc;
     margin: 50px;
     letter-spacing: 1px;
     color: #808080;
@@ -462,4 +478,60 @@ ul {
     line-height: 26px;
 }
 
-.p {}
+th {
+    background-color: #ededed;
+    text-align: left;
+}
+
+table,
+th,
+td {
+    border: 1px solid #dddddd;
+    border-collapse: collapse;
+    padding: 15px;
+}
+
+.stars {
+    width: 100%;
+    display: flex;
+    font-size: 13px;
+    letter-spacing: 1px;
+    color: lightgray;
+    margin: 15px 0;
+    margin: 0 0 15px;
+    display: inline-block;
+    width: 100%;
+}
+
+.stars i:nth-child(n+1) {
+    color: #ffba00;
+}
+
+.radio {
+    margin: 15px;
+    font-size: 50px;
+}
+
+h4 {
+    margin: 20px;
+}
+
+.pull-right {
+    text-align: right;
+}
+
+.pull-right button {
+    background-color: #649a58;
+    color: white;
+    margin: 0px 10px;
+    padding: 15px 50px;
+    border: none;
+    cursor: pointer;
+    transition: 0.3s;
+    font-size: 17px;
+}
+
+.pull-right button:hover {
+    background-color: black;
+    color: white;
+}
