--- a/ProjectFrontEnd/css/style.css
+++ b/ProjectFrontEnd/css/style.css
@@ -138,14 +138,40 @@ body {
 
 #slide {}
 
-.slide {
-    height: 400px;
+.slider img {
     padding: 15px 0px;
     border: 1px solid rgb(245, 223, 223);
-    background-image: url(../img/main-banner-1-1903x670.jpg);
-    background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
+    width: 100%;
+    height: 600px;
+    object-fit: cover;
+}
+
+.btn {
+    height: 52px;
+    width: 52px;
+    color: white;
+    background-color: #649a58;
+    border: 10px double;
+    cursor: pointer;
+    transition: all .3s ease;
+    text-align: center;
+    line-height: 50px;
+    margin: 30px;
+}
+
+.btn:hover {
+    background: #000000;
+    color: white
+}
+
+.sliderArrows {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    position: absolute;
+    top: 40%;
 }
 
 #block-container {
@@ -520,24 +546,55 @@ body {
     padding-right: 20px;
 }
 
+footer:before {
+    background: transparent url(img/footer-pattan-left.png) no-repeat scroll 0 0;
+    position: absolute;
+    content: "";
+    left: 0;
+    right: auto;
+    bottom: 0;
+    width: 479px;
+    height: 601px;
+}
+
+footer:after {
+    background: transparent url(img/footer-pattan-right.png) no-repeat scroll 0 0;
+    position: absolute;
+    content: "";
+    left: auto;
+    right: 0;
+    bottom: 0;
+    width: 365px;
+    height: 482px;
+}
+
+ :before,
+ :after {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
 .footer-container {
     height: 400px;
-    margin: 10px 50px;
-    padding: 30px;
-    background-image: url(../img/footer-pattan-right.png);
-    background-repeat: no-repeat;
-    background-position: right top;
-    margin-right: 10px;
+    width: 100%;
 }
 
-background-image: url(../img/footer-pattan-left.png);
-background-image: url(../img/footer-pattan-right.png);
+.row-foot {
+    height: 330px;
+    width: 90%;
+    margin-left: 75px;
+    margin-top: 55px;
+}
+
+.col-3 {
+    height: 300px;
+    display: inline-block;
+    padding: 10px;
+}
+
 .h2 {
     color: #000000;
-}
-
-.footer-blok {
-    margin-right: 90px;
 }
 
 .footer-blok ul {
@@ -551,10 +608,6 @@ background-image: url(../img/footer-pattan-right.png);
     color: #a4a4a4;
 }
 
-.extra-link {
-    margin-right: 30px;
-}
-
 .extra-link ul {
     list-style: none;
     padding: 0;
@@ -564,10 +617,6 @@ background-image: url(../img/footer-pattan-right.png);
 .extra-link ul li {
     margin: 30px 0px;
     color: #a4a4a4;
-}
-
-.my-account {
-    margin-right: 90px;
 }
 
 .my-account ul {
@@ -584,11 +633,11 @@ background-image: url(../img/footer-pattan-right.png);
 .contact ul {
     list-style: none;
     padding: 0;
-    padding-right: 30px;
+    padding-right: 10px;
 }
 
 .contact ul li {
-    margin: 30px 0px;
+    margin: 21px 0px;
     color: #a4a4a4;
 }
 
