--- a/ProjectFrontEnd/MyPortfolio/css/style.css
+++ b/ProjectFrontEnd/MyPortfolio/css/style.css
@@ -1,18 +1,71 @@
 *{
     margin: 0px;
     padding: 0px;
+    box-sizing: border-box;
 }
+body{
+    margin: 0px;
+    font-family: 'Poppins', sans-serif;
+    color: #555;
+    background: #fff;
+    font-size: 0.9em;
+    font-weight: 400;
+    line-height: 1.5
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+    margin: 0px;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0px;
+    padding: 0px;
+}
+
+a {
+    text-decoration: none;
+  }
+
+    /* Home Styles */
 #home{
     background-image: url(../img/fullscreendark.jpg);
-    
     height: 670px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    display: flex;
+    align-items: center;
 }
 .container-home{
     /* background: #222 */
+    text-decoration: none;
 }
-.navbar{}
+.navbar{
+    border: 1px solid white;  
+  width: 200px;
+  height: 300px;
+ 
+}
+.bars{
+    border: 1px solid white;
+    height: 70px;
+    width: 70px;
+    border-radius: 50%;
+  
+}
+.bars a{
+    font-size: 50px;
+    text-align: center;
+    margin: 10px;
+}
 .IM{
     margin-left: 800px;
+    padding-bottom: 30px;
     color: white;
 }
 .btn button{
