--- a/ProjectFrontEnd/MyPortfolio/css/style.css
+++ b/ProjectFrontEnd/MyPortfolio/css/style.css
@@ -63,6 +63,9 @@ a {
     text-align: center;
     margin: 10px;
 }
+.bars:hover{
+    
+}
 .IM{
     margin-left: 800px;
     padding-bottom: 30px;
