--- a/ProjectFrontEnd/MyPortfolio/css/style.css
+++ b/ProjectFrontEnd/MyPortfolio/css/style.css
@@ -48,6 +48,8 @@ a {
 .navbar{
     border: 1px solid white;  
  position: absolute;
+ top:10px;
+ left:40px;
  
 }
 .navbar-nav {
@@ -80,24 +82,32 @@ a {
     
 }
 .freelancer{
-    border: 1px solid red;
+   
     margin-left: 800px;
+    width: 585px;
     
 }
 .IM{
-    padding-bottom: 30px;
+    padding-bottom: 10px;
     color: white;
 }
 .btn button{
     padding: 15px 40px;
     border-radius: 30px;
-    margin-left: 20px;
+    margin-right: 25px;
     border: 1px solid  #ffb400;
+    background-color: #ffb400;
+    color: #fff;
+   font-weight: bold;
+   cursor: pointer;
+}
+.btn button i{
+padding-right: 11px;
 }
 .btn button:hover{
-    background-color: #ffb400;
-    color: white;
+    background-color:#555;
 }
+
  /* About Styles */
  #about{
      border: 1px solid yellow;
@@ -111,7 +121,16 @@ a {
  .container-text{
      border: 1px solid green;
      text-align: center;
+     padding: 60px 0px 54px;
    
+ }
+ .container-text h2{
+     font-size: 55px;
+     
+ }
+ . .container-text p{
+     font-size: 15px;
+     margin: 20px 0px 0px;
  }
  .col-12{
     display: flex;
@@ -180,20 +199,67 @@ a {
  .container-portfolio{ margin: 0px 200px;
 }
  .images{
+     position: relative;
      display: grid;
      grid-template-columns: 1fr 1fr 1fr;
      grid-template-rows: 1fr 1fr;
      grid-gap: 20px;
+
      
  }
+ .images:hover .overlay {
+    opacity: 1;
+ }
  .images img{
+   
     width: 100%;
     height: 100%;
-    object-fit: cover
+    object-fit: cover;
+ 
+ }
+ .images img:hover{
+    background-color: #ffb400;
+ }
+ .overlay{
+     position: absolute;
+    top: 23%;
+    left: 10%;
+ 
+ }
+ .format{
+    color: white;
+    font-size: 20px;
+    text-align: center;
  }
  /* Content Stayls*/
  #contact{}
  .container-contact{}
  .contact{
     margin: 0px 200px;
+ }
+ .col-8{
+     margin-left: 300px;
+ }
+ .input{
+     position: relative;
+ }
+ .col-6{
+    
+     margin-bottom: 30px;
+ }
+ .comment{
+     position: absolute;
+ }
+
+ .col-8 input{
+    border-radius: 30px;
+    height: 30px;
+    width: 340px;
+    padding-left: 30px
+ }
+ .col-8 i{
+     position: absolute;
+     top: 5px;
+     left: 7px;
+     font-size: 16px;
  }
